<resources>
    <string name="app_name">MCCP2 - Case Control Study</string>
    <string name="action_settings">Settings</string>
    <string name="section1">سیکشن1: انٹرویو سے متعلق سوالات</string>
    <string name="lbl105">کلسٹر نمبر</string>
    <string name="lbl106">گھرانہ نمبر  لسٹنگ شیٹ سے لکھیں</string>
    <string name="lbl107">کیادروازے پرِای -پی-آئی کا مخصوص نشان موجود ہے</string>
    <string name="mcYes">ہاں</string>
    <string name="mcNo">نہیں</string>
    <string name="mc107_3">واضح  نہیں</string>
    <string name="lbl108">کیا اجازت مل گئی</string>
    <string name="submit"> اگلا سیکشن &#187;</string>
    <string name="mc108_3">گھر بند ہے/اجازت دینے والا موجود نہیں ہیں</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>