<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.aku.hassannaqvi.mccp2_casecontrolstudy.ui.Section1Activity"
    tools:showIn="@layout/activity_section1"
    android:layoutDirection="rtl">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/section1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:id="@+id/s1"
            style="@style/heading"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl105"
            android:id="@+id/lbl105"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/lbl105"
            android:id="@+id/mc105"
            android:maxLength="6"
            android:digits="0123456789"
            android:elevation="2dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl106"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="5"
            android:digits="1234567890-QWERTYUIOPASDFGHJKLZXCVBNM"
            android:id="@+id/mc106"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl107"
            android:id="@+id/lbl107"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:id="@+id/mc107"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/mcYes"
                android:id="@+id/mc107_yes"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/mcNo"
                android:id="@+id/mc107_no"/>
            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/mc107_3"
                android:id="@+id/mc107_3"/>

        </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl108"
            android:id="@+id/lbl108"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mc108"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/mcYes"
                android:id="@+id/mc108_yes"/>
            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/mcNo"
                android:id="@+id/mc108_no"/>
            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/mc108_3"
                android:id="@+id/mc108_3"/>
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submit"
            android:onClick="submit"
            android:text="@string/submit"
            android:layout_marginTop="80dp"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
